# vibecodingworkflow

./: .env.example  .gitignore  1paperprdasprompt.md  CONTRIBUTING.md  README.md  SKILL.md  index.html  langgraph-links.html  langgraph.json  project-evaluation-report.md  project-evaluation-request.md  pyproject.toml  session-summary-doc-update.md  start-langgraph-dev.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
artifacts/: session-11-manifest.json  session-11-summary.md  session-12-manifest.json  session-12-summary.md
bak/: 1paperprdasprompt_副本.md  hmisession.md  project-evaluation-report.md
docs/: claude-code-plugin.md  delivery-checklist.md  doc-build-config.md  github-publish.md  hitl-review-gate.md  legacy-project-migration.md  optimization-roadmap.md  progress-loop.md  project-evaluation.md  real-world-guide.html  real-world-guide.md  session-map.md  two-phase-architecture.md  user-guide.html  user-guide.md  workflow-standard.md
manual-session-prompts/: session-handoff-log.md
plans/: langgraph-direct-integration-evaluation.md  langgraph-integration-plan.md
scripts/: init-web-vibecoding-project.sh  langgraph-daemon-wrapper.sh  migrate-vibecoding-project.sh  mock_langgraph_runner.py  reset-demo-TSMC-fab-cus.sh  reset-demo-stic-fab-cus.sh  reset-langgraph-test-data.sh  run-vibecoding-loop.py  run_langgraph_test_suite.py  start-langgraph-dev.command  sync-to-dist.sh  test_langgraph_e2e.py  test_langgraph_hitl_http.py  test_langgraph_http_smoke.py  (+1 more)
templates/: CLAUDE.md  (+18 more)
(+226 files in other folders)
